--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "dotenv": "^8.0.0",
-    "graphql-yoga": "^1.18.0"
+    "graphql-tools": "^4.0.5",
+    "graphql-yoga": "^1.18.0",
+    "merge-graphql-schemas": "^1.5.8",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.5",
